# Xotepad

./: .gitignore  .gitmodules  CMakeLists.txt  installer.nsi  license.txt
component/Xotepad/: CMakeLists.txt
component/Xotepad/sources/: CDocument.cpp  CDocument.hpp  CEditorView.cpp  CEditorView.hpp  CFindReplaceDialog.cpp  CFindReplaceDialog.hpp  CMainWindow.cpp  CMainWindow.hpp  CMyFindReplaceDialog.cpp  CMyFindReplaceDialog.hpp  CScintilla.cpp  CScintilla.hpp  CXotepadApp.cpp  CXotepadApp.hpp  FileService.cpp  MainWindow.hpp  MainWindowModel.hpp  MainWindowPresenter.cpp  MainWindowPresenter.hpp  Resource.aps  Resource.rc  WindowsUtils.cpp  WindowsUtils.hpp  main.cpp  resource.h
component/core/: CMakeLists.txt
component/core/sources/: Document.cpp  Document.hpp  FileService.hpp  FindReplaceDialog.cpp  FindReplaceDialog.hpp  FindReplaceDialogPresenter.cpp  FindReplaceDialogPresenter.hpp  LexerConfigurationService.cpp  LexerConfigurationService.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowModel.cpp  MainWindowModel.hpp  MainWindowPresenter.cpp  MainWindowPresenter.hpp  WindowsUtils.cpp  WindowsUtils.hpp
component/test-core/: CMakeLists.txt
component/test-core/test/: WindowsUtils.test.cpp
component/wtl-forms/: CMakeLists.txt
component/wtl-forms/sources/: FormDSL.cpp  FormDSL.h
